--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,22 +60,26 @@ h1{
 }
 
 .info{
-    width: 300px;
+    width: 500px;
+    height: 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
     margin-bottom: 15px;
+    font-size: 20px;
 }
 
 .info-item{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 250px;
 }
 
 .info-title{
-    font-size: 18px;
+    margin-right: 5px;
 }
 
 .info-body{
@@ -83,6 +87,13 @@ h1{
 }
 
 .info-player{
+    text-transform: uppercase;
+    color: rgb(26, 131, 180);
+}
+
+.info-winner{
+    font-size: 24px;
+    line-height: 24px;
     text-transform: uppercase;
 }
 
