--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body{
     min-height: 100vh;
     background-color: rgb(41, 41, 41);
     color: white;
+    width: 100vw;
+    height: 100vh;
 }
 
 h1{
